# coding-assignment-alkye

./: .env  .env.example  .gitignore  AI_USAGE.md  Cargo.toml  README.md  prompts.md
migrations/: 20240101000001_init.sql
src/: auth.rs  cache.rs  config.rs  error.rs  lib.rs  main.rs  middleware.rs  state.rs
src/handlers/: auth.rs  dev.rs  seed.rs  tasks.rs
src/models/: challenge.rs  email_log.rs  mod.rs  task.rs  user.rs
tests/: integration.rs
